--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@types/react-responsive-masonry": "^2.1.0",
     "@types/scroll-lock": "^2.1.0",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.5.1",
     "classnames": "^2.3.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "ethers": "^5.7.2",
     "next": "13.4.1",
+    "next-auth": "^4.23.1",
     "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,6 +34,7 @@
     "react-scroll-into-view": "^1.12.1",
     "scroll-lock": "^2.1.5",
     "tailwindcss": "^3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "wagmi": "^0.6.3"
   }
 }
