[NEW] contact page created

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "wagmi": "^0.6.3"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.29.5-appdir.0"
+    "@netlify/plugin-nextjs": "^4.29.5-appdir.0",
+    "daisyui": "^3.8.1"
   }
 }
