--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
+    "@thirdweb-dev/react": "^3.16.2",
+    "@thirdweb-dev/sdk": "^3.10.64",
     "@tippyjs/react": "^4.2.6",
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
@@ -21,9 +23,10 @@
     "classnames": "^2.3.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
-    "ethers": "^5.7.2",
+    "ethers": "^5",
     "next": "13.4.1",
     "next-auth": "^4.23.1",
+    "pino-pretty": "^10.2.2",
     "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,8 +37,8 @@
     "react-scroll-into-view": "^1.12.1",
     "scroll-lock": "^2.1.5",
     "tailwindcss": "^3.3.2",
-    "typescript": "5.0.4",
-    "wagmi": "^0.6.3"
+    "tap": "^18.4.2",
+    "typescript": "5.0.4"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.29.5-appdir.0",
