--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
-    "@thirdweb-dev/react": "^3.16.2",
-    "@thirdweb-dev/sdk": "^3.10.64",
+    "@thirdweb-dev/react": "^3.14.35",
+    "@thirdweb-dev/sdk": "^3.10.54",
     "@tippyjs/react": "^4.2.6",
-    "@types/node": "20.1.2",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "@types/react-responsive-masonry": "^2.1.0",
+    "@types/node": "^20.8.3",
+    "@types/react": "^18.2.25",
+    "@types/react-dom": "^18.2.11",
+    "@types/react-google-recaptcha": "^2.1.6",
+    "@types/react-responsive-masonry": "^2.1.1",
     "@types/scroll-lock": "^2.1.1",
     "autoprefixer": "^10.4.14",
     "axios": "^1.5.1",
@@ -24,17 +25,19 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "ethers": "^5",
-    "next": "13.4.1",
+    "next": "^13.4.12",
     "next-auth": "^4.23.1",
     "pino-pretty": "^10.2.2",
     "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.11.0",
     "react-just-parallax": "^3.1.16",
     "react-responsive": "^9.0.2",
     "react-responsive-masonry": "^2.1.7",
     "react-scroll-into-view": "^1.12.1",
+    "react-toastify": "^9.1.3",
     "scroll-lock": "^2.1.5",
     "tailwindcss": "^3.3.2",
     "tap": "^18.4.2",
