--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "ethers": "^5",
+    "lokijs": "^1.5.12",
     "next": "^13.4.12",
     "next-auth": "^4.23.1",
     "pino-pretty": "^10.2.2",
